fix text overflow in profile link

--- a/src/app/core/navigation-bar/navigation-bar.component.scss
+++ b/src/app/core/navigation-bar/navigation-bar.component.scss
@@ -105,6 +105,10 @@ $-link-border-radius-bottom-right: 2.5rem;
     @extend %link-item;
     padding: 0 2rem 0 0.5rem;
 
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+
     @include respond.below(huge) {
       display: none;
     }
